--- a/public/styles.css
+++ b/public/styles.css
@@ -36,7 +36,7 @@ body {
     min-height: 100vh;
     background: radial-gradient(circle, rgba(48, 80, 80, 1) 40%, rgba(35, 59, 59, 1) 80%);
     background-repeat: no-repeat;
-    color:var(--secondary-color);
+    color: var(--secondary-color);
     font-size: 1rem;
 }
 
@@ -47,9 +47,9 @@ button {
 h1 {
     font-family: "Norican", cursive;
     text-align: center;
-    font-size: 5rem;
+    font-size: clamp(3rem, 1.875rem + 5.333vw, 5rem);
     letter-spacing: 5px;
-    padding: 50px 0;
+    padding: 50px 20px;
 }
 
 .addRecipe-btn-container {
@@ -79,14 +79,14 @@ h1 {
 }
 
 .add-recipe-wrapper {
-    width: 60%;
-    margin: 50px auto;
-    padding: 30px;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: clamp(10px, 5%, 50px);
     background-color: rgba(250, 235, 215, 0.297);
     position: relative;
 }
 
-.add-recipe-wrapper > button {
+.add-recipe-wrapper>button {
     position: absolute;
     right: 30px;
     background-color: transparent;
@@ -136,7 +136,7 @@ textarea:focus {
     box-shadow: var(--border-shadow);
 }
 
-input[type="file"]  {
+input[type="file"] {
     visibility: hidden;
 }
 
@@ -168,9 +168,15 @@ textarea {
     background-color: var(--secondary-color);
     color: var(--primary-color);
 }
+
+.wrapper {
+    width: clamp(300px, 100%, 2050px);
+    margin: 5rem auto;
+}
+
 /********************search bar******************************/
 .search-bar {
-    width: 50%;
+    width: clamp(300px, 70%, 700px);
     margin: 30px auto;
     display: flex;
     flex-direction: row;
@@ -197,10 +203,12 @@ textarea {
 .cards {
     width: 100%;
     margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    grid-template-rows: repeat(auto-fill, 360px);
     justify-content: center;
+    gap: 20px;
 }
 
 .card {
@@ -208,14 +216,17 @@ textarea {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20px; 
     border: 1px solid var(--secondary-color);
     padding: 5px;
     cursor: pointer;
 }
 
 .card .recipe-container {
-    max-width: 303px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card:hover .recipe-image img {
@@ -225,14 +236,16 @@ textarea {
 .card h3 {
     text-align: center;
     letter-spacing: .5px;
-    margin: 10px auto;
-    font-size: 20px;
+    margin: 5px auto;
+    font-size: 112%;
     font-weight: 300;
     text-shadow: 3px 1px 8px var(--black-color);
+    height: 50px;
+    display: flex;
+    align-items: center;
 }
 
 .recipe-image {
-    width: 300px;
     overflow: hidden;
     height: 300px;
     border: 1px solid var(--secondary-color);
@@ -312,7 +325,6 @@ textarea {
 
 pre {
     white-space: pre-line;
-    padding: 0 30px;
 }
 
 .modal-recipe-Btns {
@@ -341,13 +353,6 @@ pre {
 
 .hide {
     display: none !important;
-}
-
-
-@media  (max-width: 768px) {
-    .search-bar {
-            width: 70%;
-        }
 }
 
 
@@ -395,4 +400,3 @@ pre {
     background-color: transparent;
     color: var(--secondary-color)
 }
-
